--- a/src/assets/styles/Contact.scss
+++ b/src/assets/styles/Contact.scss
@@ -25,7 +25,7 @@
 
 label {
   font-size: 1.2rem;
-  font-family: 'DomaineDispNar-Medium', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .form-flex {
