--- a/src/assets/styles/Expertise.scss
+++ b/src/assets/styles/Expertise.scss
@@ -27,7 +27,7 @@
     height: 25px !important;
   
     span {
-        font-family: 'Courier Prime', monospace;
+        font-family: 'Roboto', monospace;
         color: rgb(39, 40, 34);
     }
   
