--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace !important;
+  font-family: Roboto, source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace !important;
   font-size: 1rem !important;
 }
 
@@ -24,13 +24,13 @@ a {
 }
 
 a:hover {
-  color: #5000ca;
+  color: #2a1d3d;
   transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
 }
 
 p, a, h1, h2, h3, h4, h5, label, button {
   color: white;
-  font-family: "Lato", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .navigation-bar {
@@ -39,7 +39,7 @@ p, a, h1, h2, h3, h4, h5, label, button {
 
   button {
     font-size: 1.1rem;
-    font-family: "Lato", sans-serif;
+    font-family: "Roboto", sans-serif;
     text-transform: initial;
     padding: 6px 10px;
   }
@@ -52,7 +52,7 @@ p, a, h1, h2, h3, h4, h5, label, button {
 .navigation-bar-responsive {
   span, p {
     color: #0d1116;
-    font-family: "Lato", sans-serif;
+    font-family: "Roboto", sans-serif;
   }
 }
 
