--- a/src/index.scss
+++ b/src/index.scss
@@ -1,155 +1,136 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-size: 1.1rem !important;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen","Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-size: 1.1rem !important;
 }
-
 code {
-  font-family: Roboto, source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace !important;
-  font-size: 1rem !important;
+	font-family: Roboto, source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace !important;
+	font-size: 1rem !important;
 }
-
 .main-container {
-  position: relative;
-  background-color: #0d1116;
-
+	position: relative;
+	background-color: #0d1116;
+	position: relative;
+	background-size: cover;
+	background-position: center;
+	transition: background-color .65s ease, color .65s ease;
+	/* Transition for background and color */
+	.about-section {
+		transition: background-image .85s ease;
+		/* Transition for the about section background image */
+	}
 }
-
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
-
 a:hover {
-  color: #2a1d3d;
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+	color: #200e3d;
+	transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
 }
-
 p, a, h1, h2, h3, h4, h5, label, button {
-  color: white;
-  font-family: "Roboto", sans-serif;
+	color: white;
+	font-family: "Roboto", sans-serif;
 }
-
 .navigation-bar {
-  justify-content: space-between;
-  background-color: #0d1116;
-
-  button {
-    font-size: 1.1rem;
-    font-family: "Roboto", sans-serif;
-    text-transform: initial;
-    padding: 6px 10px;
-  }
-
-  svg {
-    cursor: pointer;
-  }
+	justify-content: space-between;
+	background-color: #0d1116;
+	transition: background-color .65s ease-in-out, color .65s ease-in-out;
+	/* Add transition properties */
+	button {
+		font-size: 1.1rem;
+		font-family: "Roboto", sans-serif;
+		text-transform: initial;
+		padding: 6px 10px;
+	}
+	svg {
+		cursor: pointer;
+	}
 }
-
 .navigation-bar-responsive {
-  span, p {
-    color: #0d1116;
-    font-family: "Roboto", sans-serif;
-  }
+	span, p {
+		color: #0d1116;
+		font-family: "Roboto", sans-serif;
+	}
 }
-
 .container {
-  margin-top: 64px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+	margin-top: 64px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
-
 .header-image {
-  width: 100%;
-  height: 450px;
-
-  img {
-    width: 100%;
-    height: 450px;
-    object-fit: cover;
-  }
+	width: 100%;
+	height: 450px;
+	img {
+		width: 100%;
+		height: 450px;
+		object-fit: cover;
+	}
 }
-
 .mobile-menu-top {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
-  font-weight: bold;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 5px;
+	font-weight: bold;
 }
-
 .items-container {
-  padding: 5% 10%;
-  text-align: left;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+	padding: 5% 10%;
+	text-align: left;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
-
 .light-mode {
-  background-color: #f8f9fa;
-
-  .navigation-bar {
-    background-color: #f8f9fa;
-  }
-
-  p, a, h1, h2, h3, h4, h5, label, button {
-    color: #0d1116;
-  }
-
-  a:hover {
-    color: #5000ca;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
-  }
-
-  .navigation-bar svg {
-    color: #0d1116;
-  }
-
-  .about-section {
-    background-image: url("./assets/images/bg-light.png");
-  }
-
-  .skills-container svg {
-    color: #0d1116;
-  }
-
-  .chip {
-    background-color: rgba(0, 0, 0, 0.08);
-    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-  }
-
-  .vertical-timeline::before {
-    background-color: rgba(0, 0, 0, 0.08);
-  }
-
-  .vertical-timeline--animate .vertical-timeline-element-content.bounce-in {
-    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-  }
-
-  .vertical-timeline--two-columns .vertical-timeline-element-content .vertical-timeline-element-date {
-    color: gray;
-  }
-
-  .vertical-timeline-element-content-arrow {
-    border-right: 7px solid rgba(0, 0, 0, 0.08) !important;
-  }
-
-  .flex-chips .chip-title {
-    color: #0d1116;
-  }
+	background-color: #f8f9fa;
+	.navigation-bar {
+		background-color: #f8f9fa;
+	}
+	p, a, h1, h2, h3, h4, h5, label, button {
+		color: #0d1116;
+	}
+	a:hover {
+		color: #5000ca;
+		transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+	}
+	.navigation-bar svg {
+		color: #0d1116;
+	}
+	.about-section {
+		background-image: url("./assets/images/bg-light.png");
+	}
+	.skills-container svg {
+		color: #0d1116;
+	}
+	.chip {
+		background-color: rgba(0, 0, 0, 0.08);
+		box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+	}
+	.vertical-timeline::before {
+		background-color: rgba(0, 0, 0, 0.08);
+	}
+	.vertical-timeline--animate .vertical-timeline-element-content.bounce-in {
+		box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+	}
+	.vertical-timeline--two-columns .vertical-timeline-element-content .vertical-timeline-element-date {
+		color: gray;
+	}
+	.vertical-timeline-element-content-arrow {
+		border-right: 7px solid rgba(0, 0, 0, 0.08) !important;
+	}
+	.flex-chips .chip-title {
+		color: #0d1116;
+	}
 }
 
 @media screen {
-  @media (max-width: 768px) {
-    .items-container {
-      padding: 5% 5%;
-    }
-  }
+	@media (max-width: 768px) {
+		.items-container {
+			padding: 5% 5%;
+		}
+	}
 }
