--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -1,5 +1,9 @@
-.dark-mode .about-section {
-    background-color: rgba(0, 0, 0, 0.2);
+:root {
+    --background-dark: rgba(0, 0, 0, 0.2);
+    --font-color: white;
+    --padding: 15%;
+    --font-size-large: 1.5em;
+    --font-size-xlarge: 5em;
 }
 
 .about-section {
@@ -8,88 +12,91 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    padding: 0px 15%;
+    padding: 0px var(--padding);
     min-height: 700px;
     background-image: url("../images/bg-dark.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
-}
 
-.about-section .content {
-    text-align: left;
-    z-index: 2;
+    &.dark-mode {
+        background-color: var(--background-dark);
+    }
 
-    .social_icons {
-        display: flex;
-        flex-direction: row;
-        gap: 10px;
-        color: white;
+    .content {
+        text-align: left;
+        z-index: 2;
 
-        svg {
-            font-size: 1.8em;
+        .social_icons {
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
+            color: var(--font-color);
+
+            svg {
+                font-size: 1.8em;
+            }
+        }
+
+        .mobile_social_icons {
+            display: none;
+        }
+
+        p {
+            font-size: var(--font-size-large);
+            margin: 0; /* Reset margins */
+        }
+
+        h1 {
+            font-size: var(--font-size-xlarge);
+            margin: 0; /* Reset margins */
         }
     }
 
-    .mobile_social_icons {
-        display: none;
+    .image-wrapper {
+        z-index: 2;
+
+        img {
+            width: 150px;
+            border-radius: 50%;
+        }
     }
 
-    p {
-        font-size: 1.5em;
-        margin-block-start: 0px;
-        margin-block-end: 0px;
-    }
-
-    h1 {
-        font-size: 5em;
-        margin-block-start: 0px;
-        margin-block-end: 0px;
+    &.about {
+        text-align: center;
+        padding: 30% 0; /* Top and bottom padding */
     }
 }
 
-.about-section .image-wrapper {
-    z-index: 2;
-    img {
-        width: 150px;
-        border-radius: 50%;
-    }
-}
-
-.about p {
-    text-align: center;
-    padding-top: 30%;
-    padding-bottom: 30%;
-}
-
+/* Media Queries */
 @media screen {
     @media (max-width: 567px) {
-        .nav-left{
+        .nav-left {
             padding-top: 20px;
-            float:left;
-        }
+            float: left;
 
-        .nav-left img {
-            height: 35px
+            img {
+                height: 35px;
+            }
         }
 
         .nav-right {
-            float:right;
-        }
+            float: right;
 
-        .nav-right li {
-            padding: 10px 15px;
-            list-style:none;
-            font-size:13px;
-            color:white;
-            width: 10%;
-        }
+            li {
+                padding: 10px 15px;
+                list-style: none;
+                font-size: 13px;
+                color: var(--font-color);
+                width: 10%;
+            }
 
-        .nav-right ul {
-            list-style-type: none;
-            margin: 0px;
-            padding: 0px;
+            ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+            }
         }
 
         body {
@@ -97,13 +104,18 @@
         }
 
         .about {
-            padding-left: 5%;
-            padding-right: 5%;
+            padding: 0 5%;
             font-size: 12px;
         }
     }
 
-    @media (max-width:768px) {
+    @media (max-width: 768px) {
+        .about-section {
+            padding-top: 150px;
+            display: block;
+            padding: 0;
+        }
+
         .about-section h1 {
             font-size: 4em !important;
             text-align: left;
@@ -126,25 +138,16 @@
             display: flex !important;
             flex-direction: row;
             gap: 10px;
-            color: white;
+            color: var(--font-color);
     
             svg {
                 font-size: 1.8em;
             }
         }
 
-        .about-section {
-            padding-top: 150px;
-            display: block;
-            padding-left: 0px;
-            padding-right: 0px;
-        }
-
         .about-section .content {
             width: 90%;
-            padding-left: 5%;
-            padding-right: 5%;
-            padding-bottom: 5%;
+            padding: 0 5% 5%; /* Use shorthand for padding */
         }
 
         .about-section .image-wrapper {
