--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -1,9 +1,5 @@
-:root {
-    --background-dark: rgba(0, 0, 0, 0.2);
-    --font-color: white;
-    --padding: 15%;
-    --font-size-large: 1.5em;
-    --font-size-xlarge: 5em;
+.dark-mode .about-section {
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 .about-section {
@@ -12,91 +8,88 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    padding: 0px var(--padding);
+    padding: 0px 15%;
     min-height: 700px;
     background-image: url("../images/bg-dark.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
+}
 
-    &.dark-mode {
-        background-color: var(--background-dark);
-    }
+.about-section .content {
+    text-align: left;
+    z-index: 2;
 
-    .content {
-        text-align: left;
-        z-index: 2;
+    .social_icons {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        color: white;
 
-        .social_icons {
-            display: flex;
-            flex-direction: row;
-            gap: 10px;
-            color: var(--font-color);
-
-            svg {
-                font-size: 1.8em;
-            }
-        }
-
-        .mobile_social_icons {
-            display: none;
-        }
-
-        p {
-            font-size: var(--font-size-large);
-            margin: 0; /* Reset margins */
-        }
-
-        h1 {
-            font-size: var(--font-size-xlarge);
-            margin: 0; /* Reset margins */
+        svg {
+            font-size: 1.8em;
         }
     }
 
-    .image-wrapper {
-        z-index: 2;
-
-        img {
-            width: 150px;
-            border-radius: 50%;
-        }
+    .mobile_social_icons {
+        display: none;
     }
 
-    &.about {
-        text-align: center;
-        padding: 30% 0; /* Top and bottom padding */
+    p {
+        font-size: 1.5em;
+        margin-block-start: 0px;
+        margin-block-end: 0px;
+    }
+
+    h1 {
+        font-size: 5em;
+        margin-block-start: 0px;
+        margin-block-end: 0px;
     }
 }
 
-/* Media Queries */
+.about-section .image-wrapper {
+    z-index: 2;
+    img {
+        width: 150px;
+        border-radius: 50%;
+    }
+}
+
+.about p {
+    text-align: center;
+    padding-top: 30%;
+    padding-bottom: 30%;
+}
+
 @media screen {
     @media (max-width: 567px) {
-        .nav-left {
+        .nav-left{
             padding-top: 20px;
-            float: left;
+            float:left;
+        }
 
-            img {
-                height: 35px;
-            }
+        .nav-left img {
+            height: 35px
         }
 
         .nav-right {
-            float: right;
+            float:right;
+        }
 
-            li {
-                padding: 10px 15px;
-                list-style: none;
-                font-size: 13px;
-                color: var(--font-color);
-                width: 10%;
-            }
+        .nav-right li {
+            padding: 10px 15px;
+            list-style:none;
+            font-size:13px;
+            color:white;
+            width: 10%;
+        }
 
-            ul {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-            }
+        .nav-right ul {
+            list-style-type: none;
+            margin: 0px;
+            padding: 0px;
         }
 
         body {
@@ -104,18 +97,13 @@
         }
 
         .about {
-            padding: 0 5%;
+            padding-left: 5%;
+            padding-right: 5%;
             font-size: 12px;
         }
     }
 
-    @media (max-width: 768px) {
-        .about-section {
-            padding-top: 150px;
-            display: block;
-            padding: 0;
-        }
-
+    @media (max-width:768px) {
         .about-section h1 {
             font-size: 4em !important;
             text-align: left;
@@ -138,16 +126,25 @@
             display: flex !important;
             flex-direction: row;
             gap: 10px;
-            color: var(--font-color);
+            color: white;
     
             svg {
                 font-size: 1.8em;
             }
         }
 
+        .about-section {
+            padding-top: 150px;
+            display: block;
+            padding-left: 0px;
+            padding-right: 0px;
+        }
+
         .about-section .content {
             width: 90%;
-            padding: 0 5% 5%; /* Use shorthand for padding */
+            padding-left: 5%;
+            padding-right: 5%;
+            padding-bottom: 5%;
         }
 
         .about-section .image-wrapper {
