--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,15 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	font-size: 1.1rem !important;
 }
+
+.dark-mode .about-section {
+    background-image: url("./assets/images/bg-dark.png");
+}
+  
+  .light-mode .about-section {
+    background-image: url("./assets/images/bg-light.png");
+}
+
 code {
 	font-family: Roboto, source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace !important;
 	font-size: 1rem !important;
@@ -133,6 +142,8 @@ p, a, h1, h2, h3, h4, h5, label, button {
 		}
 	}
 }
+
+
 .main-container {
 	position: relative;
 	background-position: center;
